force-app/main/default/objects/Fee__c/Fee__c.object-meta.xml
<CustomObject>
    <description>Fees are maintained by the TrueCost administrators</description>
    <label>TDSP Fee</label>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TDSP Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>