force-app/main/default/objects/Fee__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <description>How often does this fee occur, is it based on kWh usage (volumetric), or is it determined by the customer&#39;s actions (potential)?</description>
    <inlineHelpText>How often does this fee occur, is it based on kWh usage (volumetric), or is it determined by the customer&#39;s actions (potential)?</inlineHelpText>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Volumetric</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>