force-app/main/default/objects/Fee__c/fields/Minimum_usage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_usage__c</fullName>
    <label>Lower threshhold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>