force-app/main/default/objects/Fee__c/fields/Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class__c</fullName>
    <description>Is this fee charged to residential or commercial customers?</description>
    <inlineHelpText>Is this fee charged to residential or commercial customers?</inlineHelpText>
    <label>Fee Class/Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Secondary Service &lt;= 10 kVa</fullName>
            </value>
            <value>
                <fullName>Secondary Service &gt; 10 kVa</fullName>
            </value>
            <value>
                <fullName>Residential Gas</fullName>
            </value>
            <value>
                <fullName>Commercial Gas</fullName>
            </value>
            <value>
                <fullName>Agriculture Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>