force-app/main/default/objects/Fee__c/fields/TDSP__c.field-meta.xml
<CustomField>
    <fullName>TDSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What service provider/territory does this fee apply to?</description>
    <inlineHelpText>What service provider/territory does this fee apply to?</inlineHelpText>
    <label>TDSP</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>