force-app/main/default/objects/Fee__c/fields/Upper_Threshhold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Threshhold__c</fullName>
    <label>Upper Threshhold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>