force-app/main/default/objects/Fee__c/fields/Utility_Zone__c.field-meta.xml
<CustomField>
    <fullName>Utility_Zone__c</fullName>
    <label>Utility Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casper</fullName>
            </value>
            <value>
                <fullName>Torrington</fullName>
            </value>
            <value>
                <fullName>Gillette</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>