force-app/main/default/objects/Fee__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value (in $)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>