force-app/main/default/objects/Fee__c/listViews/AEP_Texas_Central_Company.listView-meta.xml
<ListView>
    <fullName>AEP_Texas_Central_Company</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Basis__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP__c</field>
        <operation>equals</operation>
        <value>AEP Texas Central Company</value>
    </filters>
    <label>AEP Texas Central Company</label>
    <language>en_US</language>
</ListView>