force-app/main/default/objects/Fee__c/listViews/CenterPoint_Energy_Houston_Electric.listView-meta.xml
<ListView>
    <fullName>CenterPoint_Energy_Houston_Electric</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Basis__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP__c</field>
        <operation>equals</operation>
        <value>CenterPoint Energy Houston Electric</value>
    </filters>
    <label>CenterPoint Energy Houston Electric</label>
    <language>en_US</language>
</ListView>