force-app/main/default/objects/Fee__c/listViews/Commercial.listView-meta.xml
<ListView>
    <fullName>Commercial</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Basis__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>commercial</value>
    </filters>
    <filters>
        <field>TDSP__c</field>
        <operation>notContain</operation>
        <value>SourceGas</value>
    </filters>
    <label>Commercial</label>
    <language>en_US</language>
</ListView>