force-app/main/default/objects/Fee__c/listViews/ERCOT.listView-meta.xml
<ListView>
    <fullName>ERCOT</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Basis__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP__c</field>
        <operation>contains</operation>
        <value>Electric,AEP,Texas New Mexico,Oncor,sharyland,nueces</value>
    </filters>
    <label>ERCOT</label>
    <language>en_US</language>
</ListView>