force-app/main/default/objects/Fee__c/listViews/Gas_Choice.listView-meta.xml
<ListView>
    <fullName>Gas_Choice</fullName>
    <columns>NAME</columns>
    <columns>Basis__c</columns>
    <columns>Rate_Class__c</columns>
    <columns>Minimum_usage__c</columns>
    <columns>TDSP__c</columns>
    <columns>Upper_Threshhold__c</columns>
    <columns>Utility_Zone__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rate_Class__c</field>
        <operation>equals</operation>
        <value>Residential Gas,Commercial Gas,Agriculture Gas</value>
    </filters>
    <label>Gas Choice</label>
    <language>en_US</language>
</ListView>