force-app/main/default/objects/Fee__c/listViews/Oncor_Electric_Delivery_Company.listView-meta.xml
<ListView>
    <fullName>Oncor_Electric_Delivery_Company</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Basis__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP__c</field>
        <operation>equals</operation>
        <value>Oncor Electric Delivery Company</value>
    </filters>
    <label>Oncor Electric Delivery Company</label>
    <language>en_US</language>
</ListView>