force-app/main/default/objects/Fee__c/listViews/Texas_New_Mexico_Power_COAST.listView-meta.xml
<ListView>
    <fullName>Texas_New_Mexico_Power_COAST</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Basis__c</columns>
    <columns>TDSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP__c</field>
        <operation>equals</operation>
        <value>Texas New Mexico Power - COAST</value>
    </filters>
    <label>Texas New Mexico Power - COAST</label>
    <language>en_US</language>
</ListView>